--- a/react/src/styles/_pages.scss
+++ b/react/src/styles/_pages.scss
@@ -8,7 +8,7 @@ $practiceTitleMargin: 10px;
 .codingPracticeTitle {
     font-size: 20px;
     font-weight: bold;
-    width: min-content;
+    width: 100%;
     padding-top: $practiceTitleMargin;
     padding-bottom: $practiceTitleMargin;
     padding-left: 10px;
@@ -19,5 +19,4 @@ $practiceTitleMargin: 10px;
 }
 
 .codingPracticeContents {
-    padding-left: 5px;
 }
