--- a/react/src/styles/main.scss
+++ b/react/src/styles/main.scss
@@ -1,2 +1,14 @@
 @use "flex";
 @use "pages";
+
+body {
+    width: 100%;
+    margin-left: 0px;
+    padding-left: 0px;
+}
+
+div {
+    width: 100%;
+    margin-left: 0px;
+    padding-left: 0px;
+}
