--- a/react/src/styles/_pages.scss
+++ b/react/src/styles/_pages.scss
@@ -1,21 +1,49 @@
+@use "class";
+
+.codingPracticeHeader, .codingPracticeBody {
+    margin-left: 5px;
+}
+
 .codingPracticeHeader {
+    @extend .unselectable;
     font-size: 30px;
     margin-bottom: 10px;
 }
 
-$practiceTitleMargin: 10px;
+$practiceTitleMargin: 20px;
 
 .codingPracticeTitle {
+    color:beige;
     font-size: 20px;
     font-weight: bold;
     width: 100%;
-    padding-top: $practiceTitleMargin;
-    padding-bottom: $practiceTitleMargin;
     padding-left: 10px;
     padding-right: 10px;
 
+    border-color: #dbac7e;
     border-style: solid;
     border-width: 2px 0px;
+
+    background-color: #002a53;
+}
+
+.codingPracticeTitleLabel {
+    @extend .unselectable;
+    padding-top: $practiceTitleMargin;
+    padding-bottom: $practiceTitleMargin;
+}
+
+.codingPracticeTitleButton {
+    background-color: #013d79;
+    color: beige;
+    width: 100%;
+    height: 300;
+    border: 0;
+}
+
+.codingPracticeTitleButton:hover {
+    background-color: #b2b6bb;
+    color: black;
 }
 
 .codingPracticeContents {
