--- a/react/src/styles/_pages.scss
+++ b/react/src/styles/_pages.scss
@@ -1,5 +1,9 @@
 @use "class";
 
+.page {
+    height: 100%;
+}
+
 .codingPracticeHeader, .codingPracticeBody {
     margin-left: 5px;
 }
@@ -29,6 +33,8 @@ $practiceTitleMargin: 20px;
 
 .codingPracticeTitleLabel {
     @extend .unselectable;
+    min-width: min-content;
+    width: 150px;
     padding-top: $practiceTitleMargin;
     padding-bottom: $practiceTitleMargin;
 }
@@ -36,8 +42,8 @@ $practiceTitleMargin: 20px;
 .codingPracticeTitleButton {
     background-color: #013d79;
     color: beige;
-    width: 100%;
-    height: 300;
+    width: 100px;
+    align-self: stretch;
     border: 0;
 }
 
@@ -46,5 +52,6 @@ $practiceTitleMargin: 20px;
     color: black;
 }
 
-.codingPracticeContents {
+.codingPracticeBody {
+    height: 750px;
 }
