Sets up button for Create Question and cleanup

--- a/react/src/styles/_general_buttons.scss
+++ b/react/src/styles/_general_buttons.scss
@@ -1,5 +1,6 @@
 .roundButton {
-    border: "2px solid red";
-    border-radius: "5px";
-    padding: "5px";
+    border: 2px solid red;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
 }
