--- a/react/src/styles/main.scss
+++ b/react/src/styles/main.scss
@@ -2,17 +2,4 @@
 @use "pages";
 @use "create_question";
 @use "general_buttons";
-
-body {
-    width: 100%;
-    margin-left: 0px;
-    padding-left: 0px;
-    background-color: beige;
-    overflow-x: hidden;
-}
-
-.roundButton {
-    border: 2px solid red;
-    border-radius: 5px;
-    padding: 5px;
-}
+@use "elements";
