--- a/react/src/styles/_pages.scss
+++ b/react/src/styles/_pages.scss
@@ -47,6 +47,7 @@ $practiceTitleMargin: 20px;
     width: 100px;
     align-self: stretch;
     border: 0;
+    cursor: pointer;
 }
 
 .codingPracticeTitleButton:hover {
